add stylesheet link back to head

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -37,6 +37,8 @@
 <meta name="msapplication-config" content="{{ "/public/browserconfig.xml?v=20230723a" | relative_url }}">
 <meta name="theme-color" content="#ffffff">
 
+<link rel="stylesheet" href='{{ "/assets/css/styles.css" | relative_url }}'>
+
 <script>
   {% include head.js %}
 </script>
