--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -10,6 +10,24 @@
 
 html { height: 100%; }
 
+/* https://fullystacked.net/system-font-deep-dive/ */
+/* https://github.com/system-fonts/modern-font-stacks?tab=readme-ov-file#monospace-code */
+/* https://css-tricks.com/snippets/css/system-font-stack/ */
+/* font-family: system-ui, "Segoe UI Variable Display", "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
+body {
+  @apply tracking-tight leading-tight hyphens-none;
+  @apply bg-slate-400 text-slate-900;
+  font-family: ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas, "DejaVu Sans Mono", monospace;
+  @apply text-sm;
+  font-variation-settings: 'opsz', 36;
+  font-variation-settings: 'wght', 700;
+  font-variation-settings: 'wdth', 150;
+  width: 100%; height: 100vh;
+  @apply max-w-3xl mx-auto;
+  @apply p-10;
+}
+
+
 .site-title {
   @apply font-black;
 }
